force-app/main/default/objects/IntegrationJob__c/IntegrationJob__c.object-meta.xml
<CustomObject>
    <label>Trabalho da Integração</label>
    <nameField>
        <displayFormat>TI-{000000}</displayFormat>
        <label>Nome do Trabalho da Integração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trabalhos da Integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>