force-app/main/default/objects/IntegrationJob__c/fields/AttachmentIds__c.field-meta.xml
<CustomField>
    <fullName>AttachmentIds__c</fullName>
    <description>Um set&lt;Id&gt; com os ids dos anexos serializado pelo apex</description>
    <label>Id dos anexos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>