force-app/main/default/objects/IntegrationJob__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <label>Tipo do Erro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ErrorType</valueSetName>
    </valueSet>
</CustomField>