force-app/main/default/objects/IntegrationJob__c/fields/IntegrationDirection__c.field-meta.xml
<CustomField>
    <fullName>IntegrationDirection__c</fullName>
    <label>Integration Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUTBOUND</fullName>
                <default>true</default>
                <label>OUTBOUND</label>
            </value>
            <value>
                <fullName>INBOUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>