force-app/main/default/objects/IntegrationJob__c/fields/IntegrationDomain__c.field-meta.xml
<CustomField>
    <fullName>IntegrationDomain__c</fullName>
    <label>Integration Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Termination__c</fullName>
                <default>true</default>
                <label>Termination__c</label>
            </value>
            <value>
                <fullName>PurchaseSaleContract__c</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>