force-app/main/default/objects/IntegrationJob__c/fields/IntegrationType__c.field-meta.xml
<CustomField>
    <fullName>IntegrationType__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CASE_FINISH_EVENT</fullName>
                <default>true</default>
                <label>CASE_FINISH_EVENT</label>
            </value>
            <value>
                <fullName>CCV_FINISH_EVENT</fullName>
            </value>
            <value>
                <fullName>TASK_COMMUNICATION</fullName>
            </value>
            <value>
                <fullName>COMMUNICATION_WHATSAPP_HSM</fullName>
            </value>
            <value>
                <fullName>COMMUNICATION_EMAIL</fullName>
            </value>
            <value>
                <fullName>CHANGE_DATA_CAPTURE</fullName>
            </value>
            <value>
                <fullName>HEFESTO_ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>HEFESTO_TRANSFER</fullName>
            </value>
            <value>
                <fullName>HEFESTO_UNASSIGNMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>