force-app/main/default/objects/IntegrationJob__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>integration</fullName>
                <default>true</default>
                <label>Integration</label>
            </value>
            <value>
                <fullName>email_communication</fullName>
                <label>Email Communication</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>