force-app/main/default/objects/IntegrationJob__c/fields/RecordKeys__c.field-meta.xml
<CustomField>
    <fullName>RecordKeys__c</fullName>
    <label>RecordKeys</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>