force-app/main/default/objects/IntegrationJob__c/fields/RelatedSobjectCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedSobjectCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Trabalhos da Integração</relationshipLabel>
    <relationshipName>Trabalhos_da_Integra_o</relationshipName>
    <type>Lookup</type>
</CustomField>