force-app/main/default/objects/IntegrationJob__c/fields/RelatedSObjectId__c.field-meta.xml
<CustomField>
    <fullName>RelatedSObjectId__c</fullName>
    <label>RelatedSObjectId</label>
    <type>TextArea</type>
</CustomField>