force-app/main/default/objects/IntegrationJob__c/fields/RelatedSObjectTaskAction__c.field-meta.xml
<CustomField>
    <fullName>RelatedSObjectTaskAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ação da tarefa</label>
    <referenceTo>TaskAction__c</referenceTo>
    <relationshipLabel>Trabalhos da Integração</relationshipLabel>
    <relationshipName>Trabalhos_da_Integra_o</relationshipName>
    <type>Lookup</type>
</CustomField>