force-app/main/default/objects/IntegrationJob__c/fields/RelatedSObjectTaskId__c.field-meta.xml
<CustomField>
    <fullName>RelatedSObjectTaskId__c</fullName>
    <label>Id da task relacionada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>