force-app/main/default/objects/IntegrationJob__c/fields/RelatedSObjectTermination__c.field-meta.xml
<CustomField>
    <fullName>RelatedSObjectTermination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Termination</label>
    <referenceTo>Termination__c</referenceTo>
    <relationshipLabel>Trabalhos da Integração</relationshipLabel>
    <relationshipName>IntegrationJob</relationshipName>
    <type>Lookup</type>
</CustomField>