force-app/main/default/objects/IntegrationJob__c/fields/RequestAttempts__c.field-meta.xml
<CustomField>
    <fullName>RequestAttempts__c</fullName>
    <label>Tentativas de Requisição</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>