force-app/main/default/objects/IntegrationJob__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <label>Corpo da Requisição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>