force-app/main/default/objects/IntegrationJob__c/fields/RequestEndpoint__c.field-meta.xml
<CustomField>
    <fullName>RequestEndpoint__c</fullName>
    <label>Endpoint da Requisição</label>
    <type>TextArea</type>
</CustomField>