force-app/main/default/objects/IntegrationJob__c/fields/RequestHttpMethod__c.field-meta.xml
<CustomField>
    <fullName>RequestHttpMethod__c</fullName>
    <label>Método Http da Requisição</label>
    <type>TextArea</type>
</CustomField>