force-app/main/default/objects/IntegrationJob__c/fields/RequestLastAttemptDate__c.field-meta.xml
<CustomField>
    <fullName>RequestLastAttemptDate__c</fullName>
    <label>Data da Última Tentativa</label>
    <type>DateTime</type>
</CustomField>