force-app/main/default/objects/IntegrationJob__c/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <label>Status da Requisição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Consultant Analysis</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>