force-app/main/default/objects/IntegrationJob__c/fields/ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatusCode__c</fullName>
    <label>Código de Status da Resposta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>